bug: 왼쪽 li가 overflow 될 시 ul에 스크롤이 생기지 않는 문제 발생

--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -31,7 +31,10 @@ li {
 }
 
 .box-Menu {
-  width: 20%;
+  width: 300px;
+  height: 100vh;
+  min-width: 300px; /* 최소 너비 설정 */
+  max-width: 300px; /* 최대 너비 설정 */
   background-color: #eee;
   padding: 20px;
   overflow-y: auto;
@@ -39,11 +42,16 @@ li {
 }
 
 .box-Prompt {
-  width: 80%;
+  flex: 1;
+  height: 100vh;
+  width: calc(100% - 300px);
+  display: flex;
+  flex-direction: column;
   background-color: #fff;
   padding: 20px;
+  margin-top: auto;
+  box-shadow: 0 -5px 10px rgba(0, 0, 0, 0.1);
   overflow-y: auto;
-  max-height: 100%;
 }
 
 .box-Input {
@@ -52,14 +60,19 @@ li {
 }
 
 #txt-Input {
-  width: 100%;
+  width: calc(100% - 20px); /* 우측 패딩을 제외한 너비 설정 */
+  height: 40px;
+  min-height: 40px; /* 최소 높이 유지 */
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 16px;
+  resize: none;
+  overflow-y: hidden;
 }
 
 #btn-Submit {
+  margin-left: 10px;
   background-color: #007bff;
   color: #fff;
   border: none;
@@ -68,6 +81,7 @@ li {
   font-size: 16px;
   cursor: pointer;
 }
+
 
 #btn-Submit:hover {
   background-color: #0056b3;
